--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,4 +12,13 @@
  *
  *= require_tree .
  *= require_self
+ *= require bootstrap
+ *= require rails_bootstrap_forms
+
+
  */
+
+
+.table-striped tr {
+  background-color: rgba(100, 20, 20, 0.4);
+}
